--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
-title: Just the Docs Template
+title: Cyberlab
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
+color_scheme: dark
 
-url: https://just-the-docs.github.io
 
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+url: https://cyberlab974.hithub.io
