--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ title: Cyberlab
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 color_scheme: dark
+logo: "/assets/images/logo.png"
+
 
 
 url: https://cyberlab974.hithub.io
